# hardware_protocols

./: .clang-format  CMakeLists.txt  CMakePresets.json
.github/: actions.yml
.github/workflows/: build.yml  lint.yml  main.yml
OLED_Lib/: CMakeLists.txt
OLED_Lib/headers/: OLED_library.h
OLED_Lib/src/: OLED_library.cpp
OLED_Main/: CMakeLists.txt  OLED_Controller.cpp
cmake/: HWPLibraryConfig.cmake.in
examples/: CMakeLists.txt  aht20.cpp  i2c_oled_ssd1309.cpp  i2c_probe.cpp
include/hardware_protocols/i2c/: i2c.hpp  i2c_ch347.hpp  i2c_ch347t.hpp
src/hardware_protocols/i2c/: i2c_ch347.cpp  i2c_ch347t.cpp
